fix alignment

--- a/src/components/content/home/home.css
+++ b/src/components/content/home/home.css
@@ -204,7 +204,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     height: 100%;
     overflow: hidden;
     margin-bottom: 10px;
